Cycles: small light sources with multiple importance sampling enabled breaks the Huang BSDF #113728

Closed
opened 2023-10-14 20:31:08 +02:00 by Fernando Alcala · 1 comment

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.23

Blender Version
Broken: version: 4.0.0 Beta, branch: blender-v4.0-release, commit date: 2023-10-06 00:22, hash: 887570065fa4

Short description of error
Small area lights, small non-zero radius spot and point lights, small mesh lights, or a sun light with multiple importance sampling enabled causes spontaneous fireflies and unresolvable noise with the Huang BSDF.

Exact steps for others to reproduce the error
Use the animal fur example blend.
Turn off denoising.
Change to object mode, select the hair, open a shader editor, and change Chiang to Huang.
Render and notice the fireflies.
Turn multiple importance sampling off for the "Key" light.
Render and notice no fireflies.

Chiang MIS Huang MIS Haung MIS off
chiang MIS on.png huang MIS on.png huang MIS off.png

It is most apparent with light hair colors.

Why do I say it is unresolvable? Here is a 40,000sample render with "Key" multiple importance sampling on, it is still noisy. Interestingly, the denoised image still has some noise.

noisy denoised noisy high contrast
melanin0.25 light path defaults MIS on 40000samples.png melanin0.25 light path defaults MIS on 40000samples denoised.png melanin0.25 light path defaults MIS on 40000samples vhc1.7.png

I know Weizhen isn't here.

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.23 **Blender Version** Broken: version: 4.0.0 Beta, branch: blender-v4.0-release, commit date: 2023-10-06 00:22, hash: `887570065fa4` **Short description of error** Small area lights, small non-zero radius spot and point lights, small mesh lights, or a sun light with multiple importance sampling enabled causes spontaneous fireflies and unresolvable noise with the Huang BSDF. **Exact steps for others to reproduce the error** Use the animal fur example blend. Turn off denoising. Change to object mode, select the hair, open a shader editor, and change Chiang to Huang. Render and notice the fireflies. Turn multiple importance sampling off for the "Key" light. Render and notice no fireflies. | Chiang MIS| Huang MIS | Haung MIS off| |--|--|--| |![chiang MIS on.png](/attachments/9aba07d4-ba5e-4cd7-871e-d76c40814e25) |![huang MIS on.png](/attachments/4226c47d-a9d9-4101-85ca-e809bf6fe5e0) |![huang MIS off.png](/attachments/2ff569df-4e44-4a5d-bca4-893ea44a2a24) | It is most apparent with light hair colors. Why do I say it is unresolvable? Here is a 40,000sample render with "Key" multiple importance sampling on, it is still noisy. Interestingly, the denoised image still has some noise. | noisy | denoised | noisy high contrast | |--|--|--| |![melanin0.25 light path defaults MIS on 40000samples.png](/attachments/bc8f76f5-670e-43fe-bbd0-a2850630c9ce) |![melanin0.25 light path defaults MIS on 40000samples denoised.png](/attachments/7ec773d0-1936-4de4-8262-cd9a92a018ba) |![melanin0.25 light path defaults MIS on 40000samples vhc1.7.png](/attachments/c2e725a6-8a60-4dd4-a372-6fa4ccfa254b) | I know Weizhen isn't here.
Fernando Alcala added the
Severity
Normal
Status
Needs Triage
Type
Report
labels 2023-10-14 20:31:09 +02:00
Iliya Katushenock added the
Interest
Render & Cycles
label 2023-10-14 20:32:48 +02:00
Member

I can confirm.

I can confirm.
Alaska added
Module
Render & Cycles
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-10-15 02:32:19 +02:00
Weizhen Huang self-assigned this 2023-12-04 12:59:16 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-12 13:31:09 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#113728
No description provided.